Preserve map order and null values in projection copies
Replace Map.copyOf usage with an explicit LinkedHashMap copy for projection maps so insertion order is preserved and null values are retained (null keys still NPE). Update CompatibilityProjectionSupport and TaskDetailStore to return an unmodifiable LinkedHashMap (empty sources return Map.of()).

Add a contract test to ensure projection outputs keep entries with null values, and migrate many engine tests and the ProjectionAwareTaskManager test helper usages to the storage-level projection APIs (TaskMessageProjection/TaskMessageAttemptProjection), new upsert/getVisible/getStored APIs and record-style accessors. These changes fix a bug where Map.copyOf rejected null output entries and adapt tests to the projection-based interfaces.